--- a/new1.html
+++ b/new1.html
@@ -360,7 +360,7 @@ ul li #login:hover {
 
     <div class="card">
       <div class="card__image-holder">
-        <img class="card__image" src="self.jpg" />
+        <img class="card__image" src="./images/self.jpg" />
       </div>
       <div class="card-title">
         <a href="#" class="toggle-info btn">
@@ -387,7 +387,7 @@ ul li #login:hover {
   
     <div class="card">
       <div class="card__image-holder">
-        <img class="card__image" src="depress1.jpg"  />
+        <img class="card__image" src="./images/depress1.jpg"  />
       </div>
       <div class="card-title">
         <a href="#" class="toggle-info btn">
@@ -414,7 +414,7 @@ ul li #login:hover {
   
     <div class="card">
       <div class="card__image-holder">
-        <img class="card__image" src="therapy.jpg" />
+        <img class="card__image" src="./images/therapy.jpg" />
       </div>
       <div class="card-title">
         <a href="#" class="toggle-info btn">
@@ -440,7 +440,7 @@ ul li #login:hover {
   
     <div class="card">
       <div class="card__image-holder">
-        <img class="card__image" src="anxiety.png"  />
+        <img class="card__image" src="./images/anxiety.png"  />
       </div>
       <div class="card-title">
         <a href="#" class="toggle-info btn">
@@ -466,7 +466,7 @@ ul li #login:hover {
   
     <div class="card">
       <div class="card__image-holder">
-        <img class="card__image" src="ship.jpg"  />
+        <img class="card__image" src="./images/ship.jpg"  />
       </div>
       <div class="card-title">
         <a href="#" class="toggle-info btn">
@@ -492,7 +492,7 @@ ul li #login:hover {
   
     <div class="card">
       <div class="card__image-holder">
-        <img class="card__image" src="mental.png" style="width: 100%;height: 225px;" />
+        <img class="card__image" src="./images/mental.png" style="width: 100%;height: 225px;" />
       </div>
       <div class="card-title">
         <a href="#" class="toggle-info btn">
