--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="navbar-brand" href="#"><img src="./images/logo.png" id="logo"></a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Home</a>
+            <a class="nav-link " aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Services </a>
@@ -34,7 +34,7 @@
             <a class="nav-link" href="#">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="new 1.html">Wellness Hub</a>
+            <a class="nav-link" href="new1.html">Wellness Hub</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contactus.html">Contact us</a>
