--- a/new1.html
+++ b/new1.html
@@ -322,10 +322,10 @@ ul li #login:hover {
 <body>
   <nav class="navbar  navbar-light " id="nav">
     <div class="container-fluid" style="background:transparent">
-        <a class="navbar-brand" href="#"><img src="logo.png" id="logo"></a>
+        <a class="navbar-brand" href="#"><img src="./images/logo.png" id="logo"></a>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="main.html">Home</a>
+                <a class="nav-link " aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Services </a>
@@ -334,7 +334,7 @@ ul li #login:hover {
                 <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="new1">Wellness Hub</a>
+                <a class="nav-link" href="new1.html">Wellness Hub</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contactus.html">Contact us</a>
@@ -429,7 +429,7 @@ ul li #login:hover {
       <div class="card-flap flap1">
         <div class="card-description">
           Therapy is the act of caring for someone, or the method of caring.
-           If you have a rare disease, your doctor's therapy will hopefully cure you.        </div>
+           If you have a rare disease, your doctor's therapy will hopefully cure you.</div>
         <div class="card-flap flap2">
           <div class="card-actions">
             <a href="#" class="btn">Read more</a>
