--- a/contactus.html
+++ b/contactus.html
@@ -19,10 +19,10 @@
     <div>
         <nav class="navbar  navbar-light " id="nav">
             <div class="container-fluid" style="background:transparent">
-                <a class="navbar-brand" href="#"><img src="logo.png" id="logo"></a>
+                <a class="navbar-brand" href="#"><img src="./images/logo.png" id="logo"></a>
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="main.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Services </a>
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="new 1.html">Wellness Hub</a>
+                        <a class="nav-link" href="new1.html">Wellness Hub</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactus.html">Contact us</a>
