--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#" id="login">Login</a>
+            <a class="nav-link" href="register.html" id="login">Login</a>
           </li>
           <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -93,7 +93,7 @@
 
         <div class="article-wrapper">
           <figure>
-            <img src="./images/Mentally Healthy Communities  (1).jpg" alt="" />
+            <img src="./images/depress1.jpg" alt="" />
           </figure>
           <div class="article-body">
             <h2>Depression</h2>
@@ -114,7 +114,7 @@
 
         <div class="article-wrapper">
           <figure>
-            <img src="https://picsum.photos/id/103/800/450" alt="" />
+            <img src="./images/self.jpg" alt=""/>
           </figure>
           <div class="article-body">
             <h2>Psychosis</h2>
