--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <br><br>
         Your Journey to Wellness Begins Here.
       </h6><br>
-      <input type="button" class="start" value="START NOW" />
+      <input type="button" class="start" value="START NOW" src="register.html" />
     </div>
   </div>
   <div>
@@ -286,12 +286,12 @@
     <!-- <input type="text" class="email" placeholder="Enter Your E-mail"> -->
     <span style="font-size: 25px;margin-top: -70px;margin-left: 60px;">Quick Links</span>
     <ul class="menu">
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       
       <li><a href="#">Services</a></li>
       <li><a href="#">About Us</a></li>
-      <li><a href="#">Wellness Hub</a></li>
-      <li><a href="#">Contact </a></li>
+      <li><a href="new1.html">Wellness Hub</a></li>
+      <li><a href="contactus.css">Contact </a></li>
     </ul>
     <!--  -->
   </div>
