--- a/new1.html
+++ b/new1.html
@@ -341,7 +341,7 @@ ul li #login:hover {
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#" id="login">Login</a>
+                <a class="nav-link" href="register.html" id="login">Login</a>
             </li>
             <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
