--- a/contactus.html
+++ b/contactus.html
@@ -38,7 +38,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="login">Login</a>
+                        <a class="nav-link" href="register.html" id="login">Login</a>
                     </li>
                     <!-- <li class="nav-item">
                   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -107,12 +107,12 @@
             <!-- <input type="text" class="email" placeholder="Enter Your E-mail"> -->
             <span style="font-size: 25px;margin-top: -70px;margin-left: 60px;">Quick Links</span>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
 
                 <li><a href="#">Services</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Wellness Hub</a></li>
-                <li><a href="#">Contact </a></li>
+                <li><a href="new1.html">Wellness Hub</a></li>
+                <li><a href="contactus.css">Contact </a></li>
             </ul>
             <!--  -->
         </div>
