Update image alt text and adjust logo height

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="image">
     <nav class="navbar  navbar-light " id="nav">
       <div class="container-fluid" style="background:transparent">
-        <a class="navbar-brand" href="#"><img src="./images/logo.png" id="logo"></a>
+        <div class="navbar-brand"><img src="./images/logo.png" id="logo" alt="image" /></div>
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link " aria-current="page" href="index.html">Home</a>
